Security/05-JWT-and-Keycloak/07-authz-fe-proxy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authz-fe-proxy
  namespace: default
spec:
  selector:
    matchLabels:
      app: proxy
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["fe.magedu.com","proxy.default.svc.cluster.local"]
        paths: ["/*"]
    when:
    - key: request.auth.claims[iss]
      values: 
      - "http://keycloak.keycloak.svc.cluster.local:8080/auth/realms/istio"
      - "http://keycloak.magedu.com:8080/auth/realms/istio"
  - to:
    - operation:
        hosts: ["fe.magedu.com","proxy.default.svc.cluster.local"]
        paths: ["/livez","/readyz"]
        methods: ["POST"]
    when:
    - key: request.auth.claims[iss]
      values: 
      - "http://keycloak.keycloak.svc.cluster.local:8080/auth/realms/istio"
      - "http://keycloak.magedu.com:8080/auth/realms/istio"
    - key: request.auth.claims[groups]
      values: 
      - "/fe-proxy-admin"
